--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "Botirjon Umurzoqov",
@@ -14,11 +14,12 @@
     "bcrypt": "^5.0.1",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.6.0",
+    "dotenv": "^16.0.3",
     "edge.js": "^5.3.2",
     "express": "^4.17.1",
     "express-edge": "^2.0.2",
     "express-fileupload": "^1.2.1",
-    "express-session": "^1.17.2", 
+    "express-session": "^1.17.2",
     "mongoose": "^6.0.13"
   },
   "devDependencies": {
